acceptance/handle-manager/handle-manager-deployment-doi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-handle-manager-doi-deployment
  labels:
    app: dissco-handle-manager-doi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-handle-manager-doi
  template:
    metadata:
      labels:
        app: dissco-handle-manager-doi
        language: java
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-handle-manager
          image: public.ecr.aws/dissco/handle-manager:sha-e6844f7
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "750m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
