acceptance/handle-manager/handle-manager-route-doi.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager-doi
spec:
  selector:
    app: dissco-handle-manager-doi
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-doi-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/doi-manager/api/v1/pids`)
      kind: Rule
      services:
        - name: dissco-handle-manager-doi
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-doi-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-doi-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /doi-manager
    forceSlash: false
