acceptance/handle-manager/handle-manager-route-handle.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager
spec:
  selector:
    app: dissco-handle-manager
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/handle-manager/api/pids/v1`)
      kind: Rule
      services:
        - name: dissco-handle-manager
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /handle-manager/api/pids/v1
