acceptance/handle-manager/handle-manager-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager
spec:
  selector:
    app: dissco-handle-manager
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/handle-manager/api/v1/pids`)
      kind: Rule
      services:
        - name: dissco-handle-manager
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-stripprefix
        - name: dissco-handle-manager-cors-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /handle-manager
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-cors-headers
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
    accessControlAllowHeaders: "*"
    accessControlAllowOrigin: "*"
    accessControlMaxAge: 100
    addVaryHeader: true
